--- a/contact-us.html
+++ b/contact-us.html
@@ -3,26 +3,36 @@
   <title>Contact us</title>
   <link rel="icon" href="connect4.png">
   <link rel="stylesheet" href="contact-us.css">
+  <link rel="stylesheet" type="text/css" href="logsign.css">
+        <script src="logsign.js"></script>
+
 </head>
 <body>
   <div id="topnav">
-		<ul>
-			<li><a href="index.html" target="_balnk">Home</a></li>
-			<li><a href="history.html"target="_balnk">History</a></li>
-			<li><a href="rules.html"target="_balnk">Rule</a></li>
-			<li><a href="bio-page.html"target="_balnk">Bio-page</a></li>
-			<li><a href="contact-us.html"target="_balnk">Contact-us</a></li>
-			<li class="dropdown">
-			<a href="#" class="dropbtn">Link</a>
-			  <div class="dropdown-content">
-				<a href="https://www.google.com/search?q=connect+4&rlz=1C1JZAP_enUS747US747&oq=connect+4+&aqs=chrome..69i57j69i59l2j0l5.3243j0j8&sourceid=chrome&ie=UTF-8" target="_blank">Link to Google search</a>
-				<a href="https://www.mathsisfun.com/games/connect4.html" target="_blank">Link1 to Connect4 game</a>
-				<a href="https://papergames.io/en/connect4" target="_blank">Link2 to Connect4 game</a>
-				<a href="https://poki.com/en/g/connect-4" target="_blank">Link3 to Connect4 game</a>
-			  </div>
-		  </li>
-		</ul>
-	  </div>
+      <ul>
+	      <li><a href="index.html" target="_balnk">Home</a></li>
+	      <li><a href="history.html" target="_balnk">History</a></li>
+	      <li><a href="rules.html" target="_balnk">Rule</a></li>
+	      <li><a href="bio-page.html" target="_balnk">Meet the Developers</a></li>
+	      <li><a href="contact-us.html" target="_balnk">Contact-us</a></li>
+	      <li class="dropdown">
+          <a href="#" class="dropbtn">External Links</a>
+          <div class="dropdown-content">
+            <a href="https://www.google.com/search?q=connect+4&rlz=1C1JZAP_enUS747US747&oq=connect+4+&aqs=chrome..69i57j69i59l2j0l5.3243j0j8&sourceid=chrome&ie=UTF-8" target="_blank">Link to Google search</a>
+            <a href="https://www.mathsisfun.com/games/connect4.html" target="_blank">Link1 to Connect4 game</a>
+            <a href="https://papergames.io/en/connect4" target="_blank">Link2 to Connect4 game</a>
+            <a href="https://poki.com/en/g/connect-4" target="_blank">Link3 to Connect4 game</a>
+          </div>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropbtn">Login/Sign Up</a>
+          <div class="dropdown-content">
+            <a onclick="document.getElementById('id01').style.display='block'">Login</a>
+            <a onclick="document.getElementById('id02').style.display='block'">Sign Up</a>
+          </div>
+        </li>
+      </ul>
+</div> 
   <h1>Contact us</h1>
   <h3>Contact Form</h3>
     <div class="contactform">
